# cmakeBase

./: .gitignore  CMakeLists.txt  README.md
.github/: CODEOWNERS
.github/workflows/: create-release.yml  linux.yml  mac.yml  windows.yml
cmake/: compilerWarnings.cmake  compiler_warnings.cmake  createPackageFiles.cmake  create_package_files.cmake  faster_development.cmake  getArchType.cmake  get_arch_type.cmake  get_cpm.cmake  handleExternals.cmake  handle_externals.cmake  optimizationFlags.cmake  optimization_flags.cmake
doku/: FetchOptimization.md  ProjectStructure.md
test/: CMakeLists.txt  testExternal.cpp  testExternalHandling.cmake  testExternals.cmake
